--- a/style.css
+++ b/style.css
@@ -72,11 +72,11 @@ h2:hover {
 }
 
 .cross {
-  background-image: url(assets/cross.png);
+  background-image: url(assets/1.jpg);
 }
 
 .circle {
-  background-image: url(assets/circle.png);
+  background-image: url(assets/2.jpg);
 }
 
 .cross,
